--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "bootstrap": "4.0.0-alpha.6",
+    "bootstrap-vue": "^0.22.1",
+    "moment": "^2.18.1",
     "vue": "^2.3.3",
+    "vue-awesome": "^2.3.1",
     "vue-router": "^2.6.0",
     "vuex": "^2.3.1",
     "vuex-router-sync": "^4.2.0"
@@ -51,6 +55,7 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "style-loader": "^0.18.2",
     "url-loader": "^0.5.8",
     "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
