--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
     "bootstrap-vue": "^0.22.1",
+    "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "vue": "^2.3.3",
     "vue-awesome": "^2.3.1",
+    "vue-focus": "^2.1.0",
     "vue-router": "^2.6.0",
     "vuex": "^2.3.1",
     "vuex-router-sync": "^4.2.0"
@@ -30,7 +32,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "chalk": "^2.0.1",
+    "chalk": "^2.1.0",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
