--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
     "bootstrap-vue": "^0.22.1",
+    "firebase": "^4.3.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "vue": "^2.3.3",
     "vue-awesome": "^2.3.1",
     "vue-focus": "^2.1.0",
+    "vue-js-toggle-button": "^1.1.2",
     "vue-router": "^2.6.0",
+    "vue-simple-spinner": "^1.2.5",
     "vuex": "^2.3.1",
+    "vuex-loading": "^0.1.12",
     "vuex-router-sync": "^4.2.0"
   },
   "devDependencies": {
